TP-3087 some z-index issue when in a wide screen.

--- a/src/assets/css/pwa_install.css
+++ b/src/assets/css/pwa_install.css
@@ -14,6 +14,7 @@
     height:24px;
     cursor:pointer;
     color:#666;
+    z-index:99;
 }
 
 .pwa_install li span {
